--- a/public/public/index.html
+++ b/public/public/index.html
@@ -19,10 +19,10 @@
         <a href="#" class="logo">Tech X</a>
 
         <ul class="nav-list">
-            <li><a href="https://ranjithranjit.github.io/techx">Home</a></li>
-            <li><a href="https://ranjithranjit.github.io/about1">About</a></li>
-            <li><a href="https://ranjithranjit.github.io/services">Service</a></li>
-            <li><a href="https://ranjithranjit.github.io/projects">Pre-Projects</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/services">Service</a></li>
+            <li><a href="/pre-projects">Pre-Projects</a></li>
             <li><a href="https://wa.me/9342813051?text=Hi%20Ranjith">Contact</a></li>
         </ul>
 
